[package]
name = "malkmusl_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
lazy_static = "1.4.0"
rand = "0.8.5"
termcolor = "1.4.1"
tokio = { version = "1.35.1", features = ["full"] }

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
