[package]
name = "malkmusl_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[malkmusl_log]
name = "malkmusl_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
glutin = "0.30.10"
glium = "0.32.1"
winit = "0.27.5"
vulkano = "0.33.0"
na = "0.32.2"
malkmusl_log = { path = "../malkmusl_log" }

async-trait = "0.1.77"
lazy_static = "1.4.0"
rand = "0.8.5"
tokio = { version = "1.35.1", features = ["full"] }

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]


